--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
     </div>
   </div>
 
-  <audio id="bgMusic" src="https://www.bensound.com/bensound-music/bensound-romantic.mp3" autoplay loop></audio>
-  <audio id="clickSound" src="https://www.soundjay.com/buttons/sounds/button-09.mp3"></audio>
+  <audio id="bgMusic" src="adrianne-lenker-anything.mp3" autoplay loop></audio>
+  <audio id="clickSound" src="adrianne-lenker-anything.mp3"></audio>
 
   <script>
     const isiSurat = [
